[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://Scene/OtherScene/help_things.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bhfnobsi52gsc" path="res://Art/MagicWeapon/34.png" id="2"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="3"]
[ext_resource type="PackedScene" uid="uid://b3qof5s6nwscy" path="res://Scene/BackPack/Box_1.tscn" id="4"]

[node name="HelpThings" type="Node2D"]
script = ExtResource( "1" )

[node name="bg" type="Sprite2D" parent="."]
scale = Vector2(1, 0.5)
texture = ExtResource( "2" )

[node name="j1" type="Label" parent="bg"]
offset_left = -185.0
offset_top = -86.0
offset_right = -125.0
offset_bottom = 26.0
scale = Vector2(0.7, 1.4)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 100
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="j2" type="Label" parent="bg"]
offset_left = -24.0
offset_top = -86.0
offset_right = 36.0
offset_bottom = 26.0
scale = Vector2(0.7, 1.4)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 100
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="dy" type="Label" parent="bg"]
offset_left = 143.0
offset_top = -86.0
offset_right = 203.0
offset_bottom = 26.0
scale = Vector2(0.7, 1.4)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource( "3" )
theme_override_font_sizes/font_size = 100
text = "="
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="cl_1" parent="." instance=ExtResource( "4" )]
offset_left = -268.0
offset_top = -25.0
offset_right = -218.0
offset_bottom = 25.0

[node name="cl_2" parent="." instance=ExtResource( "4" )]
offset_left = -106.0
offset_top = -25.0
offset_right = -56.0
offset_bottom = 25.0

[node name="cl_3" parent="." instance=ExtResource( "4" )]
offset_left = 47.0
offset_top = -24.0
offset_right = 97.0
offset_bottom = 26.0

[node name="scw" parent="." instance=ExtResource( "4" )]
offset_left = 225.0
offset_top = -25.0
offset_right = 275.0
offset_bottom = 25.0
